# sdl3_vulkan_module_c_cpp

./: CMakeLists.txt  README.md  build.bat  run.bat
include/: vsdl_cimgui.h  vsdl_cleanup.h  vsdl_init.h  vsdl_mesh.h  vsdl_pipeline.h  vsdl_renderer.h  vsdl_text.h  vsdl_types.h  vsdl_utils.h
shaders/: shader2d.frag  text.frag  text.vert  tri.vert
src/: main.c  vma_impl.cpp  vsdl_cimgui.c  vsdl_cleanup.c  vsdl_init.c  vsdl_mesh.c  vsdl_pipeline.c  vsdl_renderer.c  vsdl_text.c  vsdl_utils.c
